syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.book.server";
option java_outer_classname = "BookProto";

service BookService {
    rpc getBookDetails(BookRequest) returns (BookResponse);
}

message BookRequest {
    int32 bookId = 1;
}

message BookResponse {
    int32 bookId = 1;
    string title = 2;
    string author = 3;
    string genre = 4;
    int32 publishedYear = 5;
}
